# Routing_Optimization_Problem

./: pyproject.toml
data/input/: vehicle_fleet.json
data/input/restrictions/: Caminhão 1.kml  Caminhão 2.kml  Caminhão 3.kml  ZMRC.kml  restrictions.json
data/output/: Caminhão 1.json  Caminhão 2.json  Caminhão 3.json  debug_routes.csv  delivery_routes.csv  map_data_export.json
data/output/enriched/: Caminhão 1.json  Caminhão 2.json  Caminhão 3.json
data/output/maps/: route_plan_map.html  truck_restrictions_map.html
data/output/maps/steps/: 01_restrictions.html  02_delivery_points.html  03_route_ABC1D23.html  03_route_Truck_1.html  03_routes.html  04_route_EFG2H34.html  04_route_VUC_2.html  05_route_XYZ4E56.html  06_route_LMN7J89.html
data/output/routes_geojson/: route_Route 1.geojson  route_Route 2.geojson  route_Route 3.geojson
src/: main.py
src/etl/: extract.py  load.py  transform.py
src/mapping/: cluster_map.py  delivery_points.py  map_data_export.py  restrictions_map.py
src/optimization/: assign_clusters_heuristic.py  build_road_network.py  delivery_clustering.py  route_planner.py
src/utils/: config.py
test/: test.py
