[tool.poetry]
name = "routing-optimization-problem"
version = "3.0.0"
description = "Otimização de rotas para áreas com múltiplas restrições de acesso na cidade de São Paulo"
authors = ["Wesley Pinheiro da Silva <wpsilva.contato@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
folium = "^0.19.5"
geopandas = "^1.0.1"
shapely = "^2.0.7"
fiona = "^1.10.1"
geopy = "^2.4.1"
networkx = "^3.4.2"
osmnx = "^2.0.1"
scikit-learn = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
